2007-10-15  Akim Demaille  <demaille@gostai.com>

	Update tests.
	* tests-local.mk: Adjust.

2007-10-15  Akim Demaille  <demaille@gostai.com>

	Update test suite.
	* tests-local.mk: now we must specify the directory of the failed
	tests.

2007-10-15  Akim Demaille  <demaille@gostai.com>

	Prefer expr to stmt.
	* src/parser/ugrammar.y: The inherits and disinherits keywords
	are now proper binary operators returning expressions.
	So is "class foo { stmts }".

2007-10-15  Akim Demaille  <demaille@gostai.com>

	do.
	* src/ast/ast.yml (Scope::target): New.
	* share/urbi/urbi.u: Use it to declare the String and Float features.
	* src/parser/ugrammar.y, src/parser/utoken.l (TOK_DO): New.
	(do expr { stmts }): Generalization of scope.
	Adjust scope uses.
	* src/runner/runner.cc (Scope): Adjust.
	* tests-local.mk: We no longer pass class-definition.chk which is
	really a stupid test case that we should get rid of.

2007-10-15  Akim Demaille  <demaille@gostai.com>

	Sort rules.
	* src/parser/ugrammar.y: Here.

2007-10-15  Akim Demaille  <demaille@gostai.com>

	Declaration order change.
	* src/parser/ugrammar.y: Here.

2007-10-15  Akim Demaille  <demaille@gostai.com>

	Fix arg count check.
	* src/runner/runner.cc: here.
	The code used to be right, I shouldn't have changed it.

2007-10-15  Akim Demaille  <demaille@gostai.com>

	Fix arity check.
	* src/object/primitives.hh: Comment changes.
	* src/object/urbi-exception.hxx: Fix error message.

2007-10-15  Akim Demaille  <demaille@gostai.com>

	Sanitize Urbi exceptions.
	* src/object/urbi-exception.cc, src/object/urbi-exception.hh,
	* src/object/urbi-exception.hxx:
	Pass strings by const ref.
	Pass first the formal argument type/number, then the effective
	one.
	I think the previous code had it wrong, but it was not tested
	(for builtins).
	(UrbiException::fun_): New.
	With a new ctor.
	(UrbiException::what): Adjust.
	* src/object/primitives.hh: Adjust dependencies, and pass
	the __PRETTY_FUNCTION__ when we can.